@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="3.5.005">
+<addon id="plugin.video.theoath" name="TheOath" provider-name="host505" version="3.5.007">
     <requires>
         <!--<import addon="xbmc.python" version="2.20.0" />-->
         <import addon="script.theoath.artwork" />
@@ -11,7 +11,6 @@
         <import addon="script.module.six" />
         <import addon="script.module.kodi-six" />
         <import addon="script.module.simplejson" />
-        <import addon="script.module.openscrapers" optional="true" />
         <import addon="script.module.orion" optional="true" />
         <import addon="plugin.video.youtube" optional="true" />
     </requires>
