@@ -1,4 +1,9 @@
-[B][COLOR gold]v3.5.005[/COLOR][/B]
+[B][COLOR gold]v3.5.007[/COLOR][/B]
+- Removed Openscrapers support
+    Causes unsolvable installation issue in the case of Kodi 18 to 19 upgrade
+    and openscrapers was already installed.
+
+[B][COLOR gold]v3.5.005-6[/COLOR][/B]
 - Minor fixes
 
 [B][COLOR gold]v3.5.004[/COLOR][/B]
